baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__03_hir.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== HIR ITEMS ===
function FormatMessage {
  params: [name: String]
  return: String
  body: Expr {
    exprs: [
      Idx::<Expr>(0): Block { stmts: [], tail_expr: None }
    ]
    root: Idx::<Expr>(0)
  }
}
class NestedQuotes {
  single_in_double: String
  double_in_single: String
  She: Path(Path { segments: ["said"], kind: Plain })
  hello: Path(Path { segments: ["\"')\n  escaped_in_escaped string @alias(\""], kind: Plain })
  The: Path(Path { segments: [""], kind: Plain })
  quote: Path(Path { segments: [""], kind: Plain })
  is: Path(Path { segments: ["here"], kind: Plain })
  complex_nesting: String
  really: Path(Path { segments: [""], kind: Plain })
  complex: Path(Path { segments: [""], kind: Plain })
  json_like: String
  key: Path(Path { segments: [""], kind: Plain })
  value: Path(Path { segments: [""], kind: Plain })
}
client GPT4 {
  provider: unknown
}
function ProcessText {
  params: [input: String]
  return: String
  body: Expr {
    exprs: [
      Idx::<Expr>(0): Block { stmts: [], tail_expr: None }
    ]
    root: Idx::<Expr>(0)
  }
}
class RawStrings {
  simple: String
  with_quotes: String
  multi_hash: String
  multiline: String
}
client GPT4 {
  provider: unknown
}
function GetRole {
  return: Path(Path { segments: ["\"admin\" | \"user\" | \"guest\""], kind: Plain })
  body: Expr {
    exprs: [
      Idx::<Expr>(0): Literal(String(" \"user\""))
      Idx::<Expr>(1): Block { stmts: [Idx::<Stmt>(0)], tail_expr: None }
    ]
    stmts: [
      Idx::<Stmt>(0): Return(Some(Idx::<Expr>(0)))
    ]
    root: Idx::<Expr>(1)
  }
}
class Messages {
  greeting: String
  empty: String
  with_spaces: String
  with_escapes: String
  with_quotes: String
  hello: Path(Path { segments: [""], kind: Plain })
}
class UnicodeStrings {
  emoji_basic: String
  emoji_multiple: String
  emoji_in_text: String
  chinese: String
  arabic: String
  japanese: String
  russian: String
  math_symbols: String
  currency: String
  arrows: String
  zero_width: String
  rtl_override: String
}
client GPT4 {
  provider: unknown
}
