baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__03_hir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.NestedQuotes {
  single_in_double: string
  double_in_single: string
  She: user.said
  hello: "')
  escaped_in_escaped string @alias("
  The: ?
  quote: ?
  is: user.here
  complex_nesting: string
  json_like: string
}
function user.FormatMessage(name: string) -> string  [llm] {
  baml.llm.call_llm_function(GPT4, "FormatMessage", map { "name": name })
}
function user.FormatMessage$build_request(name: string) -> baml.http.Request  [expr] {
  baml.llm.build_request("FormatMessage", map { "name": name })
}
function user.FormatMessage$render_prompt(name: string) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("FormatMessage", map { "name": name })
}
class user.RawStrings {
  simple: string
  with_quotes: string
  multi_hash: string
  multiline: string
}
function user.ProcessText(input: string) -> string  [llm] {
  baml.llm.call_llm_function(GPT4, "ProcessText", map { "input": input })
}
function user.ProcessText$build_request(input: string) -> baml.http.Request  [expr] {
  baml.llm.build_request("ProcessText", map { "input": input })
}
function user.ProcessText$render_prompt(input: string) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("ProcessText", map { "input": input })
}
class user.Messages {
  greeting: string
  empty: string
  with_spaces: string
  with_escapes: string
  with_quotes: string
}
function user.GetRole() -> "admin" | "user" | "guest"  [expr] {
  { return "user" }
}
class user.UnicodeStrings {
  emoji_basic: string
  emoji_multiple: string
  emoji_in_text: string
  chinese: string
  arabic: string
  japanese: string
  russian: string
  math_symbols: string
  currency: string
  arrows: string
  zero_width: string
  rtl_override: string
}
