baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__04_5_mir.snap
---
source: target/debug/build/baml_tests-d8c3d4c38f908488/out/generated_tests.rs
expression: output
---
=== MIR ===
fn FormatMessage(name: string) -> string {
    // Locals:
    let _0: string // return
    let _1: string // name // param
    let _2: null
    let _3: "FormatMessage"
    let _4: map<string, unknown>
    let _5: "name"
    let _6: string

    bb0: {
        _2 = const fn baml.llm.call_llm_function;
        _3 = const "FormatMessage";
        _5 = const "name";
        _6 = copy _1;
        _4 = { copy _5: copy _6 };
        _0 = call copy _2(copy _3, copy _4) -> [bb2];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

}

fn ProcessText(input: string) -> string {
    // Locals:
    let _0: string // return
    let _1: string // input // param
    let _2: null
    let _3: "ProcessText"
    let _4: map<string, unknown>
    let _5: "input"
    let _6: string

    bb0: {
        _2 = const fn baml.llm.call_llm_function;
        _3 = const "ProcessText";
        _5 = const "input";
        _6 = copy _1;
        _4 = { copy _5: copy _6 };
        _0 = call copy _2(copy _3, copy _4) -> [bb2];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

}

fn GetRole() -> "admin" | "user" | "guest" {
    // Locals:
    let _0: "admin" | "user" | "guest" // return
    let _1: void

    bb0: {
        _0 = const "user";
        goto -> bb2;
    }

    bb1: {
        return;
    }

    bb2: {
        return;
    }

}

fn GPT4.resolve() -> null {
    // Locals:
    let _0: null // return
    let _1: (string, string, string, string[], map<string, unknown>) -> primitive_client
    let _2: "GPT4"
    let _3: "unknown"
    let _4: "user"
    let _5: string[]
    let _6: "user"
    let _7: "assistant"
    let _8: "system"
    let _9: map<string, unknown>
    let _10: null

    bb0: {
        _1 = const fn baml.llm.build_primitive_client;
        _2 = const "GPT4";
        _3 = const "unknown";
        _4 = const "user";
        _6 = const "user";
        _7 = const "assistant";
        _8 = const "system";
        _5 = [copy _6, copy _7, copy _8];
        _9 = {  };
        _10 = dispatch_future copy _1(copy _2, copy _3, copy _4, copy _5, copy _9) -> bb2;
    }

    bb1: {
        return;
    }

    bb2: {
        _0 = await _10 -> [bb3];
    }

    bb3: {
        goto -> bb1;
    }

}
