baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__04_thir.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
function FormatMessage(name: string) -> string
├─ param name: string
└─ LLM Body (client: GPT4)

function ProcessText(input: string) -> string
├─ param input: string
└─ LLM Body (client: GPT4)

function GetRole() -> unknown
└─ Block(1 stmts): void
   └─ Return
      └─ Literal(String(" \"user\"")): string
