baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__04_tir.snap
---
source: target/debug/build/baml_tests-5af6b621dd74eb70/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function FormatMessage:
    Return: String
  Function ProcessText:
    Return: String
  Function GetRole:
    Return: Union([Literal(String("admin")), Literal(String("user")), Literal(String("guest"))])
  Function GPT4$options:
    Return: Unknown
