baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: unreachable arm
     ╭─[ llm_types.baml:159:17 ]
     │
 159 │             _ => { continue; }
     │                 ───────┬──────  
     │                        ╰──────── unreachable arm
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: unreachable arm
     ╭─[ llm_types.baml:189:17 ]
     │
 189 │ ╭─▶             _ => {
     ┆ ┆   
 194 │ ├─▶             }
     │ │                   
     │ ╰─────────────────── unreachable arm
     │     
     │     Note: Error code: E0001
─────╯

  [type] Error: unreachable arm
     ╭─[ llm_types.baml:208:17 ]
     │
 208 │             _ => { continue; }
     │                 ───────┬──────  
     │                        ╰──────── unreachable arm
     │ 
     │ Note: Error code: E0001
─────╯

  [parse] Error: Expected ')', found error
   ╭─[ nested_quotes.baml:4:34 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                  ┬  
   │                                  ╰── Expected ')', found error
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected Unexpected token in class body, found error
   ╭─[ nested_quotes.baml:4:34 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                  ┬  
   │                                  ╰── Expected Unexpected token in class body, found error
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected attribute argument, found error
   ╭─[ nested_quotes.baml:4:34 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                  ┬  
   │                                  ╰── Expected attribute argument, found error
   │ 
   │ Note: Error code: E0010
───╯

  [type] Error: unresolved type: said
   ╭─[ nested_quotes.baml:4:38 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                      ──┬──  
   │                                        ╰──── unresolved type: said
   │ 
   │ Note: Error code: E0002
───╯

  [parse] Error: Expected Unexpected token in class body, found '"'
   ╭─[ nested_quotes.baml:4:44 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                            ┬  
   │                                            ╰── Expected Unexpected token in class body, found '"'
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: field 'The' is missing a type annotation
   ╭─[ nested_quotes.baml:5:37 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                     ─┬─  
   │                                      ╰─── field 'The' is missing a type annotation
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected Unexpected token in class body, found '\'
   ╭─[ nested_quotes.baml:5:41 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                         ┬  
   │                                         ╰── Expected Unexpected token in class body, found '\'
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected Unexpected token in class body, found '"'
   ╭─[ nested_quotes.baml:5:42 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                          ┬  
   │                                          ╰── Expected Unexpected token in class body, found '"'
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: field 'quote' is missing a type annotation
   ╭─[ nested_quotes.baml:5:43 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                           ──┬──  
   │                                             ╰──── field 'quote' is missing a type annotation
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected Unexpected token in class body, found '\'
   ╭─[ nested_quotes.baml:5:48 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                ┬  
   │                                                ╰── Expected Unexpected token in class body, found '\'
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected Unexpected token in class body, found '"'
   ╭─[ nested_quotes.baml:5:49 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                 ┬  
   │                                                 ╰── Expected Unexpected token in class body, found '"'
   │ 
   │ Note: Error code: E0010
───╯

  [type] Error: unresolved type: here
   ╭─[ nested_quotes.baml:5:53 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                     ──┬──  
   │                                                       ╰──── unresolved type: here
   │ 
   │ Note: Error code: E0002
───╯

  [parse] Error: Expected Unexpected token in class body, found '"'
   ╭─[ nested_quotes.baml:5:58 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                          ┬  
   │                                                          ╰── Expected Unexpected token in class body, found '"'
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected Unexpected token in class body, found ')'
   ╭─[ nested_quotes.baml:5:59 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                           ┬  
   │                                                           ╰── Expected Unexpected token in class body, found ')'
   │ 
   │ Note: Error code: E0010
───╯

  [type] Error: unresolved name: GPT4
    ╭─[ nested_quotes.baml:11:47 ]
    │
 11 │ ╭─▶ function FormatMessage(name: string) -> string {
    ┆ ┆   
 17 │ ├─▶ }
    │ │       
    │ ╰─────── unresolved name: GPT4
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: unresolved name: GPT4
    ╭─[ raw_strings.baml:11:2 ]
    │
 11 │ ╭─▶ }
    ┆ ┆   
 21 │ ├─▶ }
    │ │       
    │ ╰─────── unresolved name: GPT4
    │     
    │     Note: Error code: E0001
────╯

  [parse] Error: Expected function name, found error
    ╭─[ unicode_strings.baml:28:31 ]
    │
 28 │ ╭─▶     Process the text: {{ 输入 }}
 29 │ ├─▶     Return result with emojis: ✅ or ❌
    │ │                                             
    │ ╰───────────────────────────────────────────── Expected function name, found error
    │     
    │     Note: Error code: E0010
────╯

  [parse] Error: Expected ')', found error
    ╭─[ unicode_strings.baml:29:13 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │             ─┬─  
    │              ╰─── Expected ')', found error
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected function body, found error
    ╭─[ unicode_strings.baml:29:13 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │             ─┬─  
    │              ╰─── Expected function body, found error
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected parameter name, found error
    ╭─[ unicode_strings.baml:29:13 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │             ─┬─  
    │              ╰─── Expected parameter name, found error
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected return type (->), found error
    ╭─[ unicode_strings.baml:29:13 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │             ─┬─  
    │              ╰─── Expected return type (->), found error
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected top-level declaration, found error
    ╭─[ unicode_strings.baml:29:13 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │             ─┬─  
    │              ╰─── Expected top-level declaration, found error
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected type annotation, found error
    ╭─[ unicode_strings.baml:29:13 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │             ─┬─  
    │              ╰─── Expected type annotation, found error
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected top-level declaration, found error
    ╭─[ unicode_strings.baml:29:16 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │                ─┬─  
    │                 ╰─── Expected top-level declaration, found error
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected top-level declaration, found ':'
    ╭─[ unicode_strings.baml:29:19 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │                   ┬  
    │                   ╰── Expected top-level declaration, found ':'
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected top-level declaration, found identifier
    ╭─[ unicode_strings.baml:29:21 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │                     ───┬──  
    │                        ╰──── Expected top-level declaration, found identifier
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected top-level declaration, found ')'
    ╭─[ unicode_strings.baml:29:27 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │                           ┬  
    │                           ╰── Expected top-level declaration, found ')'
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected top-level declaration, found '->'
    ╭─[ unicode_strings.baml:29:29 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │                             ─┬   
    │                              ╰─── Expected top-level declaration, found '->'
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected top-level declaration, found identifier
    ╭─[ unicode_strings.baml:29:32 ]
    │
 29 │     Return result with emojis: ✅ or ❌
    │                                ────┬───  
    │                                    ╰───── Expected top-level declaration, found identifier
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected top-level declaration, found '{'
    ╭─[ unicode_strings.baml:30:1 ]
    │
 30 │   "#
    │ ┬  
    │ ╰── Expected top-level declaration, found '{'
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected config block, found identifier

  [parse] Error: Expected top-level declaration, found identifier

  [parse] Error: Expected top-level declaration, found '#'

  [parse] Error: Expected top-level declaration, found '"'

  [parse] Error: Expected top-level declaration, found identifier

  [parse] Error: Expected top-level declaration, found identifier

  [parse] Error: Expected top-level declaration, found identifier

  [parse] Error: Expected top-level declaration, found ':'

  [parse] Error: Expected top-level declaration, found '{'

  [parse] Error: Expected top-level declaration, found '{'

  [parse] Error: Expected top-level declaration, found error

  [parse] Error: Expected top-level declaration, found error

  [parse] Error: Expected top-level declaration, found '}'

  [parse] Error: Expected top-level declaration, found '}'

  [parse] Error: Expected top-level declaration, found identifier

  [parse] Error: Expected top-level declaration, found identifier

  [parse] Error: Expected top-level declaration, found identifier

  [parse] Error: Expected top-level declaration, found identifier

  [parse] Error: Expected top-level declaration, found ':'

  [parse] Error: Expected top-level declaration, found error

  [parse] Error: Expected top-level declaration, found identifier

  [parse] Error: Expected top-level declaration, found error

  [parse] Error: Expected top-level declaration, found '"'

  [parse] Error: Expected top-level declaration, found '#'

  [parse] Error: Expected top-level declaration, found '}'
